Added rest of the views
